KP-3472 Design Treeview with questions and groups: long item text (word wrap and fade out fixed)
Former-commit-id: 77ea68d737e190cb26a6b1449a6c7fafb87b1059

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-question-list.css.less
@@ -12,7 +12,8 @@
     padding-left: 50px;
     padding-right: 10px;
     margin-right: 28px;
-    //overflow: hidden;
+    overflow: hidden;
+    white-space: nowrap;
     .questionnarie-question-list-item-fontstyle();
 
     &:after {
@@ -151,7 +152,7 @@
 
     > .qname-block {
       position: absolute;
-      right: 5px;
+      right: 0px;
       top: 2px;
       height: ~"calc(100% - 3px)";
       padding-right: 10px;
