--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/markup.css.css
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/markup.css.css
@@ -6355,6 +6355,8 @@ body {
   padding-left: 50px;
   padding-right: 10px;
   margin-right: 28px;
+  overflow: hidden;
+  white-space: nowrap;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   color: #404040;
@@ -6464,7 +6466,7 @@ body {
 }
 #designer-editor.container section#main > .questionnaire-tree > .question-list .item > .qname-block {
   position: absolute;
-  right: 5px;
+  right: 0px;
   top: 2px;
   height: calc(100% - 3px);
   padding-right: 10px;
@@ -6726,6 +6728,8 @@ body {
   padding-left: 50px;
   padding-right: 10px;
   margin-right: 28px;
+  overflow: hidden;
+  white-space: nowrap;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   color: #404040;
@@ -6809,7 +6813,7 @@ body {
 }
 #verify-popover-content .question-list .item > .qname-block {
   position: absolute;
-  right: 5px;
+  right: 0px;
   top: 2px;
   height: calc(100% - 3px);
   padding-right: 10px;
